offsaleproduct - templates footer no show

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -419,7 +419,7 @@
                     </div>
                   </div>
                   <div class="clearfix">
-                    <label for="opener_date">Estoque Atual</label>
+                    <label for="current_stock">Estoque Atual</label>
                     <div class="input">
                       <div class="inline-inputs">
                         <div style="float:left; padding-right:10px" class="input-prepend">
