--- a/src/main/webapp/templates-hidden/bootstrap_large.html
+++ b/src/main/webapp/templates-hidden/bootstrap_large.html
@@ -160,10 +160,10 @@
           </div>
         </div>
       </div>
-      <footer>
+      <!--footer>
         <div class="lift:surround?with=footer;at=footer">
         </div>
-      </footer>
+      </footer-->
     </div> <!-- /container -->
     </div>
     <div id="customer_search" class="modal hide fade">
