--- a/src/main/webapp/templates-hidden/dashboard_customer.html
+++ b/src/main/webapp/templates-hidden/dashboard_customer.html
@@ -308,10 +308,11 @@
       </div>
     </div>
   </div>
-  <footer>
+  <!-- para melhorar scroll ao clicar na aba de endereço -->
+  <!--footer>
     <div class="lift:surround?with=footer;at=footer">
     </div>
-  </footer>
+  </footer-->
 </div> <!-- /container -->
 </div>
 <div id="customer_search" class="modal hide fade">
