--- a/src/main/webapp/templates-hidden/inventory.html
+++ b/src/main/webapp/templates-hidden/inventory.html
@@ -229,10 +229,11 @@
           </div>
         </div>
       </div>
-      <footer>
+      <!-- para não ter que dar scroll ao clicar na aba de configurar pacote -->
+      <!--footer>
         <div class="lift:surround?with=footer;at=footer">
         </div>
-      </footer>
+      </footer-->
     </div> <!-- /container -->
     </div>
     <div id="customer_search" class="modal hide fade">
