--- a/src/main/webapp/offsale/offsaleproduct.html
+++ b/src/main/webapp/offsale/offsaleproduct.html
@@ -36,31 +36,31 @@
                     </div>
                   </div>
               </div>
+              <div class="clearfix">
+                <label for="percentoff">Percentual de desconto</label>
+                  <div class="input">
+                    <div class="inline-inputs">
+                        <div style="float:left; padding-right:10px" class="input-prepend">
+                          <span class="add-on">%</span>
+                          <input type="text" size="19" name="percentoff" id="percentoff" class="mini currency"/>
+                        </div>
+                    </div>
+                  </div>
+              </div>
             </span>
             <span class="span9">
               <div class="clearfix">
-                <label for="name">Produto</label>
+                <label for="name">Produto/Serviço</label>
                 <div class="input">
-                  <div class="inline-inputs">
-                    <div style="float:left; padding-right:10px" class="input-prepend">
-                          <span class="add-on"></span> 
-                          <input class="xlarge process_product_field" name="product" id='product'/>
-                    </div>                                                    
-                  </div>
-                </div>
+                  <input  name="productName" id="productName"  size="30" type="text" />
+                </div>  
               </div>
               <div class="clearfix">
-                <label for="opener_date">Estoque Atual</label>
+                <label for="name">Tipo Prod/Serv</label>
                 <div class="input">
-                  <div class="inline-inputs">
-                    <div style="float:left; padding-right:10px" class="input-prepend">
-                      <span class="add-on"><img width="16" src="/images/categorie.png"></span> 
-                      <input type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_search">
-                       <span class="help-block">Quantidade atual do produto em estoque</span>
-                    </div>
-                  </div>
-                </div>
-              </div>      
+                  <input  name="productTypeName" id="productTypeName"  size="30" type="text"/>    
+                </div>  
+              </div>
             </span>
             <span class="span18">
               <div class="clearfix">
