--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -405,6 +405,17 @@
                       <select class="xlarge" id="tooth" name="tooth" size="30"></select>
                     </div>
                   </div>
+                  <div class="clearfix lift:SecuritySnippet.hasOffSaleModule">
+                    <label for="offsale">Convênio</label>
+                    <div class="input">
+                      <div class="inline-inputs">
+                        <div style="float:left; padding-right:10px" class="input-prepend">
+                          <span class="add-on"><img width="16" src="/images/agreement.png"></span> 
+                          <select class= 'xlarge' id='offsale'  name="offsale"></select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="span8">
                   <div class="clearfix">
