budget totals - td edit

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -212,6 +212,33 @@
                 </div>
               </div>
               <div class ='span18'>
+                <div class="clearfix">
+                  <label for="start_date">Total </label>
+                  <div class="input">
+                    <div class="inline-inputs">
+                      <div class="lift:SecuritySnippet.isShowSalesToUser input-prepend" style="float:left; padding-right:10px">
+                        <span class="add-on"><img src="/images/money.png" width="16"></span>
+                        <input class="small disabled" id="totallista" name="totallista" size="19" placeholder="0.00" type="text" disabled='true'>
+                        <span class="help-block">Total lista</span>
+                      </div>
+                      <div class="input-prepend" style="float:left; padding-right:10px">
+                        <span class="add-on"><img src="/images/cheque.png" width="16"></span>
+                        <input class="small disabled" id="totaldesc" name="totaldesc" size="19" placeholder="0.00" type="text" disabled='true'>
+                        <span class="help-block">Total desconto</span>
+                      </div>
+                      <div class="input-prepend" style="float:left; padding-right:10px">
+                        <span class="add-on">%</span>
+                        <input class="small disabled" id="totalperc" name="totalperc" size="19" placeholder="0.00" type="text" disabled='true'>
+                        <span class="help-block">Desconto percentual</span>
+                      </div>
+                      <div class="input-prepend" style="float:left; padding-right:10px">
+                        <span class="add-on"><img src="/images/user.png" width="16"></span>
+                        <input class="small disabled" id="totalbudget" name="totalbudget" size="19" placeholder="0.00" type="text" disabled='true'>
+                        <span class="help-block">Total orçamento</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             <table id="table_items" class='bordered-table zebra-striped'>
               <thead>
                 <tr>
@@ -264,19 +291,19 @@
                 </div>
               </div>
               <div class ='span18'>
-            <table id="table_sections" class='bordered-table zebra-striped'>
-              <thead>
-                <tr>
-                  <th>Ordem</th>
-                  <th>Título</th>
-                  <th>Obs</th>
-                  <th>Ações</th>
-                </tr>
-              </thead>
-              <tbody>
-              </tbody>
-            </table>
-            </div>
+                <table id="table_sections" class='bordered-table zebra-striped'>
+                  <thead>
+                    <tr>
+                      <th>Ordem</th>
+                      <th>Título</th>
+                      <th>Obs</th>
+                      <th>Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+              </div>
             </form>
           </div>
           <div class="tab_content row" id="paymentconditions">
@@ -295,7 +322,7 @@
                     </div>
                 </div>
               </div>
-              <div class='span12'>
+              <div class='span8'>
                 <div class="clearfix">
                     <label for="text">Data</label>
                     <div class="input">
@@ -323,21 +350,21 @@
                 </div>
               </div>
               <div class ='span18'>
-            <table id="table_paymentconditions" class='bordered-table zebra-striped'>
-              <thead>
-                <tr>
-                  <th>Dias</th>
-                  <th>Data</th>
-                  <th>Percentual</th>
-                  <th>Valor</th>
-                  <th>Obs</th>
-                  <th>Ações</th>
-                </tr>
-              </thead>
-              <tbody>
-              </tbody>
-            </table>
-            </div>
+                <table id="table_paymentconditions" class='bordered-table zebra-striped'>
+                  <thead>
+                    <tr>
+                      <th>Dias</th>
+                      <th>Data</th>
+                      <th>Percentual</th>
+                      <th>Valor</th>
+                      <th>Obs</th>
+                      <th>Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+              </div>
             </form>
           </div>
         </div>  
