--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -1,4 +1,6 @@
 <div id="main" class="lift:surround?with=activity&at=content">
+  <script type="text/javascript" src="/js/activity.js">
+  </script>
   <script type="text/javascript">
   $(function() {  
     $(".color_picker").miniColors({letterCase: 'uppercase'});
