todo obs - style

--- a/src/main/webapp/customer/todo_list_report.html
+++ b/src/main/webapp/customer/todo_list_report.html
@@ -57,6 +57,27 @@
         return "<a href='/customer/edit?id=" + row[0] + "' target='_customer_maste'>" + name + "</a>";
       }
     }
+    fields[7] = { // motivo
+      type : "format",
+      decode: function(name, row) {
+        return "<p style='line-height: 120%'>" + 
+            row[7] + "<p/>"
+      }
+    }
+    fields[8] = { // obs
+      type : "format",
+      decode: function(name, row) {
+        return "<p style='line-height: 120%'>" + 
+            row[8] + "<p/>"
+      }
+    }
+    fields[9] = { // telefone e email
+      type : "format",
+      decode: function(name, row) {
+        return "<p style='line-height: 120%'>" + 
+            row[9] + "<p/>"
+      }
+    }
     fields[11] = {
       type: "format",
       decode: function(name, row) {
