contact - preserve name option

--- a/src/main/webapp/command_full/user_command_full.html
+++ b/src/main/webapp/command_full/user_command_full.html
@@ -40,7 +40,7 @@
           </div>
           <div class="span8">
             <div class="clearfix">
-              <label for="quantity">Impressão
+              <label for="print_command">Impressão
               </label>
               <div class="input">
                 <div class="inline-inputs">
