--- a/src/main/webapp/customer/upload_contacts_file.html
+++ b/src/main/webapp/customer/upload_contacts_file.html
@@ -22,6 +22,16 @@
       </div>
     </div>
     <div class="clearfix">
+      <label for="nameasis">Nome original
+      </label>
+      <div class="input">
+        <div class="inline-inputs">
+          <input class="local_storage" name="nameasis" id='nameasis' type='checkbox' />
+           <span class="help-block">Não padroniza o nome, importa sem alteração</span>
+        </div> 
+      </div>
+    </div>
+    <div class="clearfix">
       <label for="name"></label>
       <div class="input">
         <div class="input-prepend">
