--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -18,6 +18,11 @@
               <img width='32' src="/images/icon_company.png"/>
            </a>
           </li>
+          <li>
+           <a href="/customer/upload_migration_file.html" class="_popover" rel="popover" data-content="Migrar planilha" data-original-title="Migrar Planilha">
+              <img width='32' src="/images/icon_company.png"/>
+           </a>
+          </li>
         </ul>
     </span>
     <span class="span3" style="float:left">
