pet report with tutor - like T

--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -33,6 +33,11 @@
             <img width='32' src="/images/clock.png"/>
           </a>
         </li>
+        <li class='lift:SecuritySnippet.isEbellepetSystem'>
+         <a href="/customer/treatments_conferenc_pet" target="_blancccck" class="_popover" rel="popover" data-content="Procurar / conferir agendamento" data-original-title="Agendamento">
+            <img width='32' src="/images/pets.png"/>
+          </a>
+        </li>
         <li class='lift:SecuritySnippet.isEdoctusSystem'>
             <a href="/customer/treatments_simple" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Atendimentos" data-original-title="Relatório de Atendimentos">
               <img width='32' src="/images/calendar.png"/>
