cheque commission duedate / companies  name link

--- a/src/main/webapp/manager/companies.html
+++ b/src/main/webapp/manager/companies.html
@@ -17,6 +17,12 @@
         return "<a class='btn success' href='/security/useCompany?id="+id+"'>Ir</a>"
       }
     };    
+    fields[4] = {
+      type : "format",
+      decode : function(name, row){
+        return "<a href='/security/useCompany?id="+row[2]+"'>"+name+"</a>"
+      }
+    };     
     var url = "/report/companies";
     var request = function(){
       renderReport(url,fields,$("#form_report").serializeObject(),"#grid",function(data){
