type='number' in the customer id to prevent crash

--- a/src/main/webapp/customer/customer_invoice_report.html
+++ b/src/main/webapp/customer/customer_invoice_report.html
@@ -106,7 +106,7 @@
               <div class="input">
                 <div class="inline-inputs">
                 <span>
-                  <input name="customer" class="mini id_customer_search"> 
+                  <input name="customer" class="mini id_customer_search" type="number"/> 
                   <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
                 </span>  
                 <span class="help-block">Cliente</span>
