--- a/src/main/webapp/customer/customer_radius_report.html
+++ b/src/main/webapp/customer/customer_radius_report.html
@@ -92,7 +92,7 @@
               <div class="input">
                 <div class="inline-inputs">
                 <span>
-                  <input name="customer" class="mini id_customer_search local_storage"> 
+                  <input name="customer" class="mini id_customer_search local_storage" type="number"/> 
                   <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
                 </span>  
                 </div>
