--- a/src/main/webapp/customer/list.html
+++ b/src/main/webapp/customer/list.html
@@ -57,7 +57,7 @@
 					<div class="input">
 					  <div class="inline-inputs">
 					    <span>
-					      <input name="id" id="id" class="mini id_customer_search"/>
+					      <input name="id" id="id" class="mini id_customer_search" type="number"/>
 					      <input placeholder="Nome" type="text" size="30" name="name_customer_origin" class="name_customer_search normal_name"/>
 					    </span>
 					    <span class='label-inline'>
