--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -152,7 +152,7 @@
                 <label for="user">Parceiro</label>
                 <div class="input">
                   <span>
-                    <input id="customer" name="customer" class="mini id_customer_search"/>
+                    <input id="customer" name="customer" class="mini id_customer_search" type="number"/>
                     <input placeholder="Nome" type="text" size="30" name="name_user" id="name_user"  class="name_customer_search normal_name"/>
                   </span>
                   <span class="help-block">
@@ -407,7 +407,7 @@
                     <div class="input">
                       <div class="inline-inputs">
                         <span>
-                          <input id="user_select" name="user_select" class="mini id_customer_search"/>
+                          <input id="user_select" name="user_select" class="mini id_customer_search" type="number"/>
                           <input placeholder="Nome" type="text" size="30" name="name_customer" id="name_customer"  class="name_customer_search normal_name"/>
                         </span>
                         <span class="help-block">
