--- a/src/main/webapp/financial_admin/cheque_report.html
+++ b/src/main/webapp/financial_admin/cheque_report.html
@@ -95,7 +95,7 @@
                   <span>
                     <span>
                       <img class="customer_search_button" width='24' src="/images/search.png"/>
-                      <input name="customer" class='mini id_customer_search' id='customer_for_seach' /> 
+                      <input name="customer" class='mini id_customer_search' id='customer_for_seach' type="number"/> 
                       <input class=" name_customer_search large" name="name_customer" size="30" type="text" placeholder="Nome"/>    
                     </span>
                   </span>
