--- a/src/main/webapp/templates-hidden/calendar_true.html
+++ b/src/main/webapp/templates-hidden/calendar_true.html
@@ -258,7 +258,7 @@
                <div class="input">
                   <span>
                     <img class="customer_search_button" width='24' src="/images/search.png"/>
-                    <input class='mini id_customer_search' id='rapid_customer_bp_indicatedby' name="rapid_customer_bp_indicatedby" /> 
+                    <input class='mini id_customer_search' id='rapid_customer_bp_indicatedby' name="rapid_customer_bp_indicatedby" type="number"/> 
                     <input class="name_customer_search" name="rapid_customer_indicatedby" id="rapid_customer_indicatedby"  size="30" type="text" placeholder="Nome"/>    
                   </span>
                   <span class="help-block">Indicado por</span>
@@ -301,7 +301,7 @@
                <div class="input">
                   <span>
                     <img class="customer_search_button" width='24' src="/images/search.png"/>
-                    <input class='mini id_customer_search' id='rapid_pet_bp_manager' name="rapid_pet_bp_manager" /> 
+                    <input class='mini id_customer_search' id='rapid_pet_bp_manager' name="rapid_pet_bp_manager" type="number"/> 
                     <input class="name_customer_search" name="rapid_pet_manager" id="rapid_customer_manager"  size="30" type="text" placeholder="Nome"/>    
                   </span>
                   <span class="help-block">Tutor</span>
@@ -312,7 +312,7 @@
                <div class="input">
                   <span>
                     <img class="customer_search_button" width='24' src="/images/search.png"/>
-                    <input class='mini id_customer_search' id='rapid_pet_bp_indicatedby' name="rapid_pet_bp_indicatedby" /> 
+                    <input class='mini id_customer_search' id='rapid_pet_bp_indicatedby' name="rapid_pet_bp_indicatedby" type="number"/> 
                     <input class="name_customer_search" name="rapid_pet_indicatedby" id="rapid_customer_indicatedby"  size="30" type="text" placeholder="Nome"/>    
                   </span>
                   <span class="help-block">Indicado por</span>
