--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -206,7 +206,7 @@
 								<div class="input">
 									<div class='inline-inputs'>
 										<span>
-											<input class='mini id_customer_search'  id="cutomer_id_treatment" name='customer' /> 
+											<input class='mini id_customer_search'  id="cutomer_id_treatment" name='customer' type="number"/> 
 											<input class="disabled name_customer_search" name="name_customer" id="cutomer_name_treatment" size="30" type="text" placeholder="Nome" disabled=""/>
 										</span>
 										<span class="help-block"><span data-i18n='Cliente'></span> que será atendido
