--- a/src/main/webapp/customer/customer_treatment_report.html
+++ b/src/main/webapp/customer/customer_treatment_report.html
@@ -86,7 +86,7 @@
               <div class="input">
                 <div class="inline-inputs">
                 <span>
-                  <input name="customer" class="mini id_customer_search"> 
+                  <input name="customer" class="mini id_customer_search" type="number"/> 
                   <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
                 </span>  
                 <span class="help-block"><span data-i18n='Cliente'></span></span>
