--- a/src/main/webapp/customer/scheduling.html
+++ b/src/main/webapp/customer/scheduling.html
@@ -13,7 +13,7 @@
 		                 <div class="input">
 		                    <div class='inline-inputs'>
 			                    <img class="customer_search_button" width='24' src="/images/search.png"/>
-								<input class='mini id_customer_search' id='customer_for_seach' /> 
+								<input class='mini id_customer_search' id='customer_for_seach' type="number"/> 
 								<input class="disabled name_customer_search" name="name_customer" size="30" type="text" placeholder="Nome" disabled=""/>	      
 			                </div>
 		                 </div>
