--- a/src/main/webapp/customer/todo_list_report.html
+++ b/src/main/webapp/customer/todo_list_report.html
@@ -155,7 +155,7 @@
               <div class="input">
                 <div class="inline-inputs">
                 <span>
-                  <input name="customer" class="mini id_customer_search"> 
+                  <input name="customer" class="mini id_customer_search" type="number"> 
                   <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
                 </span>  
                 <span class="help-block"><span data-i18n='Clientes'></span></span>
@@ -316,7 +316,7 @@
                 <div class="input">
                   <div class='inline-inputs'>
                     <span>
-                      <input class='mini id_customer_search'  id="cutomer_id_treatment" name='customer' /> 
+                      <input class='mini id_customer_search'  id="cutomer_id_treatment" name='customer'  type="number"/> 
                       <input class="disabled name_customer_search" name="name_customer" id="cutomer_name_treatment" size="30" type="text" placeholder="Nome" disabled=""/>
                     </span>
                     <span class="help-block"><span data-i18n='Cliente'></span> que será atendido
