--- a/src/main/webapp/customer/unify_animal.html
+++ b/src/main/webapp/customer/unify_animal.html
@@ -43,7 +43,7 @@
                 <div class="input">
                   <div class="inline-inputs">
                     <span>
-                      <input name="customer" id="customer" class="mini id_customer_search"/>
+                      <input name="customer" id="customer" class="mini id_customer_search" type="number"/>
                       <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
                     </span>
                   </div>
