--- a/src/main/webapp/financial_admin/account_ofx_conciliation.html
+++ b/src/main/webapp/financial_admin/account_ofx_conciliation.html
@@ -457,7 +457,7 @@
                     <label for="customer">Parceiro</label>
                     <div class="input">
                       <span>
-                        <input id="customer" name="customer" class="mini id_customer_search"/>
+                        <input id="customer" name="customer" class="mini id_customer_search" type="number"/>
                         <input placeholder="Nome" type="text" size="30" name="name_customer" id="name_customer"  class="name_customer_search normal_name"/>
                       </span>
                       <span class="help-block">
