--- a/src/main/webapp/financial_admin/unific_customer.html
+++ b/src/main/webapp/financial_admin/unific_customer.html
@@ -53,7 +53,7 @@
                 <div class="input">
                   <div class="inline-inputs">
                     <span>
-                      <input name="customer_origin" id="customer_origin" class="mini id_customer_search"/>
+                      <input name="customer_origin" id="customer_origin" class="mini id_customer_search" type="number"/>
                       <input placeholder="Nome" type="text" size="30" name="name_customer_origin" class="name_customer_search normal_name"/>
                     </span>
                     <span class="help-block">
@@ -72,7 +72,7 @@
                 <div class="input">
                   <div class="inline-inputs">
                     <span>
-                      <input name="customer_dest" id="customer_dest" class="mini id_customer_search"/>
+                      <input name="customer_dest" id="customer_dest" class="mini id_customer_search" type="number"/>
                       <input placeholder="Nome" type="text" size="30" name="name_customer_dest" class="name_customer_search normal_name"/>
                     </span>
                     <span class="help-block">
