--- a/src/main/webapp/financial_cashier/register_payment.html
+++ b/src/main/webapp/financial_cashier/register_payment.html
@@ -81,7 +81,7 @@
               <div class="input">
                 <div class="inline-inputs">
                   <span>
-                    <input id="customer" name="customer" class="mini id_customer_search"/>
+                    <input id="customer" name="customer" class="mini id_customer_search" type="number"/>
                     <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
                   </span>
                   <span class="help-block">
@@ -270,7 +270,7 @@
         <div class="inline-inputs">
           <span>
 	        <h3>Pagamento
-	            <input disabled='true' id="customer_payment" name="customer_payment" class="mini id_customer_search"/>
+	            <input disabled='true' id="customer_payment" name="customer_payment" class="mini id_customer_search" type="number"/>
 	            <input disabled='true' type="text" size="30" id="name_customer_payment" name="name_customer_payment" />
                 <input disabled='true' name="command_payment" id='command_payment' class="mini">
             </h3>
