--- a/src/main/webapp/templates-hidden/calendar.html
+++ b/src/main/webapp/templates-hidden/calendar.html
@@ -254,7 +254,7 @@
                <div class="input">
                   <span>
                     <img class="customer_search_button" width='24' src="/images/search.png"/>
-                    <input class='mini id_customer_search' id='rapid_customer_bp_indicatedby' name="rapid_customer_bp_indicatedby" /> 
+                    <input class='mini id_customer_search' id='rapid_customer_bp_indicatedby' name="rapid_customer_bp_indicatedby" type="number"/> 
                     <input class="name_customer_search" name="rapid_customer_indicatedby" id="rapid_customer_indicatedby"  size="30" type="text" placeholder="Nome"/>    
                   </span>
                   <span class="help-block">Indicado por</span>
