--- a/src/main/webapp/customer/treatments_conferenc_pet.html
+++ b/src/main/webapp/customer/treatments_conferenc_pet.html
@@ -192,21 +192,20 @@
       <thead>
         <th>Comanda</th>
         <th>Data</th>
-        <th>Início</th>
-        <th>Fim</th>        
-        <th>Código</th>
         <th>Nome_<span data-i18n='Cliente'></span>...</th>
         <th>Telelefone.....</th>
-        <th>Obs</th>
         <th>Nome <span data-i18n='Profissional'></span></th>
-        <th class="lift:SecuritySnippet.hasUnitModule">Unidade</th>
-        <th>Status</th>
+        <th>Pet</th>
+        <th>Tutor</th>
+        <th>Telelefone.....</th>
+        <th>Nome <span data-i18n='Auxiliar'></span></th>
         <th><span data-i18n='Serviços'></span> / Produtos</th>
+        <th>Status</th>
         <th>Forma Pgs</th>
         <th class="lift:SecuritySnippet.isFinancialUser">Tot PG</th>
         <th>Caixa</th>
+        <th class="lift:SecuritySnippet.hasUnitModule">Unidade</th>
         <input type="hidden" class="has-delete-calendar lift:SecuritySnippet.isDeleteCalendar" value="1">
-        <th>Ações...</th>    
       </tr>
     </thead>
     <tbody>
