--- a/src/main/webapp/customer/treatments_conferenc_pet.html
+++ b/src/main/webapp/customer/treatments_conferenc_pet.html
@@ -81,12 +81,6 @@
                   </div>
                 </div>
               </div>
-              <div class="clearfix">
-                <label for="status_select_filter">Observação</label>
-                <div class="input">
-                  <input type="text" id='obs_search' name="obs_search" placeholder="Contendo"/>
-                </div>
-              </div>            
             </div>
             <div class="span7">
               <div class="clearfix">
@@ -150,7 +144,7 @@
                   </div>
               </div>                        
               <div class="clearfix">
-                <label for="cashiers">Caixas  </label>
+                <label for="cashier">Caixa</label>
                  <div class="input">
                     <select class="xlarg url_parameter" name="cashier" id='cashier'></select>
                  </div>
