--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li class='lift:SecuritySnippet.isEbellepetSystem'>
-         <a href="/customer/treatments_conferenc_pet" target="_blancccck" class="_popover" rel="popover" data-content="Procurar / conferir agendamento" data-original-title="Agendamento">
+         <a href="/customer/treatments_conferenc_pet" target="_blancccck" class="_popover" rel="popover" data-content="Procurar / conferir agendamento Cliente/Pet" data-original-title="Agendamento Cliente/Pet">
             <img width='32' src="/images/pets.png"/>
           </a>
         </li>
