--- a/src/main/webapp/activity/edit_type.html
+++ b/src/main/webapp/activity/edit_type.html
@@ -25,6 +25,16 @@
               </div>
              </div>
           </div>
+          <div class="clearfix">
+            <label for="status">Status</label>
+            <div class="input">
+              <select class="medium" id="status" name="status" >
+              </select>
+              <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/status.html' rel="popover" class="_popover_basic _help">
+                <img src="/images/info.gif" width="20">
+              </a>
+            </div>
+          </div>
           <div class="lift:SecuritySnippet.isEdoctusSystem clearfix">
             <label for="invoiceGroup">Grupo Faturamento</label>
             <div class="input">
