--- a/src/main/webapp/customer/treatments_conferenc_pet.html
+++ b/src/main/webapp/customer/treatments_conferenc_pet.html
@@ -10,7 +10,7 @@
       <div>
   <h1>
     <span class="lift:CompanySnippet.thumb"> </span>
-    <input class="report_title local_storage" id="title_treatments_conferenc_report" name="title_treatments_conferenc_report" size="30" type="text" value="Resumo Atendimento Cliente"/>
+    <input class="report_title local_storage" id="title_treatments_conferenc_pet_report" name="title_treatments_conferenc_pet_report" size="30" type="text" value="Resumo Atendimento Cliente/Pet"/>
   </h1>
   <a id="hide_arguments" onclick="$('#form_search').toggle();return false;" 
     href="#" class="btn excel_buttton" 
