--- a/src/main/webapp/product/list_type.html
+++ b/src/main/webapp/product/list_type.html
@@ -11,6 +11,27 @@
       Produtos
     </a>
   </div>   	
+	<div class='filter block-message success"'>
+		<img style='float:left' src="/images/filter.png"/>
+		<span class="filter_form">
+		<script type="text/javascript">
+			$(function(){
+				$(".name_type").val(gup("name"))
+				if(gup("all")){
+					$("#all").attr("checked", "checked");
+				}				
+			});
+		</script>
+			<form action=''>
+				<input class="local_storage xlarge name_type" id="name_type" name="name" size="30" type="text" placeholder="Nome"/>
+			    <span class='label-inline'>
+			    	Tipo
+			    </span>
+				<input class="all" id="all" name="all" type="checkbox"/> Mostrar todos?
+				<input class="btn success" type="submit" value="Buscar">
+			</form>
+		</span>
+	</div>
 
 <table class="bordered-table zebra-striped">
 		<thead>
