apptype in unit

--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -153,7 +153,7 @@
                 </div>
 	            <label for="apptype">App Type</label>
 	            <div class="input">
-					<input class="mini" id="apptype" name='apptype'>
+					<input class="large" id="apptype" name='apptype'>
 	                <span class="help-block">1-ebelle 2-gerirme 3-esmile 4-edoctus 5-egrex 6-ephysio 7-ebellepet</span>
                 </div>
 	            <label for="bpIdForCompany">bpIdForCompany</label>
