--- a/src/main/webapp/unit/edit.html
+++ b/src/main/webapp/unit/edit.html
@@ -37,6 +37,13 @@
               <span class="help-block">Status da unidade</span>
             </div>
           </div>          
+          <div class="lift:SecuritySnippet.isSuperAdmin clearfix">
+            <label for="apptypeu">App Type</label>
+            <div class="input">
+              <input class="large" id="apptypeu" name='apptypeu'>
+              <span class="help-block">1-ebelle 2-gerirme 3-esmile 4-edoctus 5-egrex 6-ephysio 7-ebellepet</span>
+            </div>
+          </div>
           <div class="clearfix">
             <label for="name">Agenda</label>
             <div class="input">
