command term - ask command

--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -113,6 +113,18 @@
 	              <span class="help-block">Caso essa opção seja marcada, o sistema permitirá a repetição de comandas no mesmo dia</span>
 	            </div>
           	</div>           	           	
+			<div class="clearfix lift:SecuritySnippet.isSuperAdmin">
+	            <label for="cmdChangeDate">Troca data na command?</label>
+	            <div class="input">
+	              <input id="cmdChangeDate" name='cmdChangeDate'>
+	            </div>
+          	</div>           	           	
+			<div class="clearfix lift:SecuritySnippet.isSuperAdmin">
+	            <label for="cmdAskCommand">Pede nro comanda?</label>
+	            <div class="input">
+	              <input id="cmdAskCommand" name='cmdAskCommand'>
+	            </div>
+          	</div>           	           	
             <div class="clearfix">
                 <label for="website">Web Site</label>
                 <div class="input">
