--- a/src/main/webapp/command_full/user_command_full.html
+++ b/src/main/webapp/command_full/user_command_full.html
@@ -133,6 +133,17 @@
                 <div class="well">
                   <input class="btn success b_add_command" id="b_add_command" type="button" value="Salvar">
                 </div>
+                <div class="clearfix lift:SecuritySnippet.isCmdAskCommand">
+                  <label for="command">
+                    N.° <span data-i18n='Comanda'></span>
+                  </label>
+                    <div class="input">
+                      <div class="inline-inputs">
+                        <input name="command" id='command' class="mini">
+                        <input type='button' class="btn primary" value='Ok' id='command_get_from_server'/>
+                      </div>
+                    </div>
+                </div>                           
                 <div class="clearfix">
                   <label for="customer"><span data-i18n='Cliente'></span></label>
                    <div class="input">
